# vestor

./: .editorconfig  .env  .env.template  Makefile  README.md  docker-compose.yml  wait-for-ui.sh
UI/: package-lock.json  package.json
UI/public/: AAPL_BACKUP.csv
UI/src/: App.vue  main.ts
UI/src/components/: Dashboard.vue  Login.vue
backend/: .gitignore  Cargo.toml  Dockerfile
backend/configuration/: base.yaml  production.yaml
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs
ngrok/: Dockerfile  entrypoint.sh  ngrok.yml
ui/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  data.json  main.ts
ui/src/assets/: test.jpg:Zone.Identifier  test2.jpg:Zone.Identifier
ui/src/components/: AccountBalance.vue  Dashboard.vue  Landing.vue  Navigation.vue  NetIndicatorText.vue
ui/src/router/: index.ts
ui/src/utils/: toCurrency.ts  toPercentage.ts
ui/src/views/: Dashboard.vue  Landing.vue
