[package]
name = "backend"
version = "0.1.0"
authors = ["Sergio Masellis <sergio@sergiomasellis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"